adjust layout to prevent overlap of nav and div elements

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -23,7 +23,7 @@ nav {
 }
 
 div {
-    grid-row: 2 / 4;
+    grid-row: 3 / 4;
     grid-column: 1 / 4;
     font-size: 1.2rem;
     text-align: center;
